<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lblName"
        />

    <TextView
        android:id="@+id/lblPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lblPassword" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:background="@color/cardview_shadow_start_color"
        />

    </LinearLayout>

